--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-13-Fri.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-13-Fri.md
@@ -13,4 +13,12 @@
 18:00 - MSHMVC - WebApp - Add date pair editing to js service
 19:00 - MSHMVC - WebApp - Add date pair editing to js service
 
-19:50 - MSHMVC
+19:50 - MSHMVC - Add NuGet phone library and string extension methods
+
+21:00 - MSHMVC - Add copy api methods for room types, rate plans and extras
+
+21:50 - MSHMVC - Add copy/delete to javascript hotelActionService
+
+22:20 - MSHMVC - Update javascript for lists: extras, rate palns, room types
+
+23:10 - BREAK
