--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-14-Sat.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-14-Sat.md
@@ -1,1 +1,17 @@
 ﻿00:00 - BREAK
+
+11:00 - MSHMVC - Add bulk action scripts and check boxes to extras list, and buttons
+
+12:30 - BREAK
+
+20:00 - MSHMVC - Move bulk action copy script to mshPageApp.hotelActionBulkService 
+
+20:30 - MSHMVC - Call app.hotelActionBulkService.init from extras script
+21:00 - MSHMVC - Add hotel code and hotel list to hidden fields so scripts can pick them up
+21:30 - MSHMVC - Add bulk action checkboxes and buttons
+22:00 - MSHMVC - Add Extras API ExtraCopyBulk
+22:30 - MSHMVC - Update CheckHotel
+23:00 - MSHMVC - Add ExtrasSort and add sort script
+22:50 - BREAK - 
+- 
+
