--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
@@ -9,7 +9,9 @@
 00:50 - MSHMVC - WebApp - Add bulk scrip init to rate plan and room type scripts
 01:00 - MSHMVC - WebApp - Update scripts with correct urls
 01:10 - MSHMVC - WebApp - Update scripts to group modal buttons
-01:20 - BREAK
+01:30 - MSHMVC - WebApp - Add bulk delete to api for extras, room types and rate plans
+02:10 - MSHMVC - WebApp - Update scripts with bulk delete
+02:30 - BREAK
 
 
 
