--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
@@ -13,6 +13,22 @@
 02:10 - MSHMVC - WebApp - Update scripts with bulk delete
 02:30 - BREAK
 
+18:15 - MSHMVC - WebApp - add sticky-bottom for buttons.
+
+18:40 - MSHMVC - Add Special models
+
+19:00 - MSHMVC - HotelCache - Add repo for specials
+
+19:00 - MSHMVC - HotelCache - Update Special with attributes
+19:30 - MSHMVC - Imports - Add build for special edit
+20:00 - MSHMVC - WebApp - HotelsController-Specials
+20:30 - MSHMVC - WebApp - Add SpecialsListVm
+21:00 - MSHMVC - WebApp - Add views
+22:00 - MSHMVC - WebApp - Add specials menu
+23:00 - MSHMVC- WebApp - Add CSS and javascript for specials
+23:25 - MSHMVC - 
+
+
 
 
 
