WebApp - Add Special options list edit

--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-15-Sun.md
@@ -25,8 +25,9 @@
 20:30 - MSHMVC - WebApp - Add SpecialsListVm
 21:00 - MSHMVC - WebApp - Add views
 22:00 - MSHMVC - WebApp - Add specials menu
-23:00 - MSHMVC- WebApp - Add CSS and javascript for specials
-23:25 - MSHMVC - 
+23:00 - MSHMVC - WebApp - Add CSS and javascript for specials
+23:25 - MSHMVC - WebApp - Add Specials date edit
+23:55 - BREAK
 
 
 
