--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-16-Mon.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-16-Mon.md
@@ -3,6 +3,12 @@
 00:25 - MSHMVC - Add options list edit table
 01:30 - BREAK
 
+10:20 - MSHMVC - Ordering items.
+- Get icons for up and down. arrow-up, arrow down
+- Add Move up/down to tables in mshApp script
+- Refactor Specials table to _SpecialsTable.cshtml to be re-emitted by controller on row moves
+- Add controler SpecialMove method to return partial
 
+14:20 - MSHMVC - 
 
 
