WebApp - Update publish hotels operation

--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-22-Sun.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-22-Sun.md
@@ -12,6 +12,8 @@
 - 2024-09-22 12:06:43 90ff0e2 - Common Add Publish to the config repo
 - 2024-09-22 12:07:23 b6c5c43 - Add Hotels Publish
 
+12:15 - MSHMVC - Add confirmation and unlock to publish hotels (before making code common)
+
 13:00 - BREAK
 
 # git logron --after=2024-09-22-00:00:00 --before=2024-09-23-00:00:00 | Sort-Object
