REFACTOR Config(ConfigPub)Repositories and dependants ...
Make async only and so convert dependent calls to async
Separate IConfigRepository into its partials for Config and ConfigPub
Make IConfigPubrepository read only for cache use

--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-23-Mon.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-23-Mon.md
@@ -5,4 +5,12 @@
 
 01:15 - BREAK
 
+09:15 - MSHMVC - Create archive config table
+
+
+
+
+
+
 # git logron --after=2024-09-23-00:00:00 --before=2024-09-24-00:00:00 | Sort-Object
+
