Common - Fix Archive DbContext type, rerun migration, add repo calls for ConfigArchive

--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-23-Mon.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-23-Mon.md
@@ -8,6 +8,11 @@
 09:15 - MSHMVC - Create archive config table
 
 
+REFACTOR Config(ConfigPub)Repositories and dependants ...
+Make async only and so convert dependent calls to async
+Separate IConfigRepository into its partials for Config and ConfigPub
+Make IConfigPubrepository read only for cache use
+
 
 
 
