--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
@@ -5,6 +5,10 @@
 
 01:30 - BREAK
 
+09:45 - MSHMVC - Import CarbonOffset
+
+10:30 - MSHMVC - 
+
 
 # git logron --after=2024-09-27-00:00:00 --before=2024-09-28-00:00:00 | Sort-Object
 
