--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
@@ -7,7 +7,16 @@
 
 09:45 - MSHMVC - Import CarbonOffset
 
-10:30 - MSHMVC - 
+10:30 - MSHMVC - Import Countries
+
+
+11:15 - BREAK 
+
+
+16:00 - MSHMVC - Import Companies
+
+
+16:20 - MSHMVC - 
 
 
 # git logron --after=2024-09-27-00:00:00 --before=2024-09-28-00:00:00 | Sort-Object
