Update RatePlans editing to include the Code=>RatePlanCode+Stayfrom...
More to do on delete/copy/move

--- a/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
+++ b/solution/Msh/Msh.WebApp/ReadMe/Log-2024-09-27-Fri.md
@@ -16,7 +16,7 @@
 16:00 - MSHMVC - Import Companies
 
 
-16:20 - MSHMVC - 
+16:20 - MSHMVC - Rate Plans
 
 
 # git logron --after=2024-09-27-00:00:00 --before=2024-09-28-00:00:00 | Sort-Object
